deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: demo
 
spec:
  replicas: 2
 
  selector:
    matchLabels:
      app: nginx
      version: v1
 
  template:
    metadata:
      labels:
        app: nginx
        version: v1
 
    spec:
      containers:
      - name: nginx
        image: nginx
