deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  namespace: demo
 
spec:
  replicas: 2
 
  selector:
    matchLabels:
      app: nginx
      version: v2
 
  template:
    metadata:
      labels:
        app: nginx
        version: v2
 
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
