service.yaml
apiVersion: v1
kind: Service
 
metadata:
  name: nginx
  namespace: demo
 
spec:
  selector:
    app: nginx
 
  ports:
  - port: 80
