DestinationRule.yaml
apiVersion: networking.istio.io/v1
 
kind: DestinationRule
 
metadata:
  name: nginx
 
spec:
 
  host: nginx
 
  subsets:
 
  - name: v1
 
    labels:
      version: v1
 
  - name: v2
 
    labels:
      version: v2
