VirtualService.yaml
apiVersion: networking.istio.io/v1
 
kind: VirtualService
 
metadata:
  name: nginx
 
spec:
 
  hosts:
 
  - nginx
 
  http:
 
  - route:
 
    - destination:
 
        host: nginx
 
        subset: v1
 
      weight: 90
 
    - destination:
 
        host: nginx
 
        subset: v2
 
      weight: 10
